feat: Add remove from favourites functionality/styling

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -35,11 +35,11 @@
                                 <p class="mb-0 text-left font-weight-bold">&nbsp</p>
                             {% endif %}
                             <p class="mb-0 text-left font-weight-bold">&nbsp;€{{ product.price }}</p>
-                                                                                    {% if is_product_in_favourites %}
-                            <a href="{% url 'add_product_to_favourites' product.id %}" aria-label="add_product_to_favourites" class="favourite wishlist-remove text-danger ml-3"><i class="fas fa-heart"></i></a>
-                        {% else %}
-                            <a href="{% url 'add_product_to_favourites' product.id %}" aria-label="add_product_to_favourites" class="favourite text-danger ml-3"><i class="far fa-heart"></i></a>
-                        {% endif %}
+                            {% if is_product_in_favourites %}
+                                <a href="{% url 'remove_product_from_favourites' product.id 'product' %}" aria-label="remove product from favourites" class="favourite favourite-remove text-danger ml-3"><i class="fas fa-heart"></i></a>
+                            {% else %}
+                            <a href="{% url 'add_product_to_favourites' product.id %}" aria-label="add product to favourites" class="favourite text-danger ml-3"><i class="far fa-heart"></i></a>
+                            {% endif %}
                         </div> 
                         <br>
 
