refactor: Update button text

--- a/news/templates/news/edit_news_item.html
+++ b/news/templates/news/edit_news_item.html
@@ -34,8 +34,8 @@
                             {% endif %}
                             {% endfor %}
                             <div class="text-center pb-3">
-                                <button class="btn green-btn rounded-1 text-uppercase" type="submit">Edit News Item</button>
-                                <a class="btn red-btn rounded-1 text-uppercase" href="{% url 'manage_news_items' %}">Cancel</a>
+                                <a class="btn black-btn" href="{% url 'manage_news_items' %}">Cancel</a>
+                                <button class="btn green-btn" type="submit">Save Changes</button>
                             </div>
                         </form>
                     </div>
