--- a/favourites/templates/favourites/favourites.html
+++ b/favourites/templates/favourites/favourites.html
@@ -17,7 +17,7 @@
         </div>
         <div class="col-12 col-sm-6 p-4 my-auto">
             <div class="sort-select-wrapper w-100">
-                <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+                <select id="sort-selector" class="custom-select custom-select-sm border">
                     <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
                     <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
                     <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)</option>
@@ -63,22 +63,24 @@
                                                 <strong>€{{ favourite.price }}</strong>
                                             </div>
                                       </div>
-                                        <a class="btn green-btn" data-bs-toggle="modal" data-bs-target="#deleteFavourite{{ favourite.id }}">Delete</a>
-                                        <!-- Delete favourite modal -->
-                                        <div class="modal fade" id="deleteFavourite{{ favourite.id }}" tabindex="-1"  aria-hidden="true">
-                                            <div class="modal-dialog">
-                                                <div class="modal-content">
-                                                    <div class="modal-header">
-                                                        <h2 class="modal-title font-black">Delete Favourite</h2>
-                                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                                    </div>
-                                                    <div class="modal-body font-black">
-                                                        Are you sure you want to delete this favourite?
-                                                    </div>
-                                                    <div class="modal-footer">
-                                                        <!-- Close and delete favourite buttons-->
-                                                        <button type="button" class="btn black-btn" data-bs-dismiss="modal">Close</button>
-                                                        <a href="{% url 'remove_product_from_favourites' favourite.id 'favourites' %}" class="btn red-btn">Delete</a>
+                                        <div class="center-div pt-3">
+                                            <a class="btn green-btn" data-bs-toggle="modal" data-bs-target="#deleteFavourite{{ favourite.id }}">Delete</a>
+                                            <!-- Delete favourite modal -->
+                                            <div class="modal fade" id="deleteFavourite{{ favourite.id }}" tabindex="-1"  aria-hidden="true">
+                                                <div class="modal-dialog">
+                                                    <div class="modal-content">
+                                                        <div class="modal-header">
+                                                            <h2 class="modal-title font-black">Delete Favourite</h2>
+                                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                        </div>
+                                                        <div class="modal-body font-black">
+                                                            Are you sure you want to delete this favourite?
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                            <!-- Close and delete favourite buttons-->
+                                                            <button type="button" class="btn black-btn" data-bs-dismiss="modal">Close</button>
+                                                            <a href="{% url 'remove_product_from_favourites' favourite.id 'favourites' %}" class="btn red-btn">Delete</a>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -90,6 +92,31 @@
             </div>
         </div>
     </div>
+    {% if favourites_items.has_other_pages %}
+        <div class="pagination-holder p-4">
+            <nav aria-label="Products sorted">
+              <ul class="pagination">
+                {% if favourites_items.has_previous %}
+                  <li class="page-item"><a class="page-link" href="?page={{ favourites_items.previous_page_number }}">Previous</a></li>
+                {% else %}
+                  <li class="disabled page-item"><span class="page-link">Previous</span></li>
+                {% endif %}
+                {% for i in favourites_items.paginator.page_range %}
+                  {% if favourites_items.number == i %}
+                    <li class="page-item active"><span class="page-link">{{ i }} <span class="sr-only">(current)</span></span></li>
+                  {% else %}
+                    <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                  {% endif %}
+                {% endfor %}
+                {% if favourites_items.has_next %}
+                  <li class="page-item"><a class="page-link" href="?page={{ favourites_items.next_page_number }}">Next</a></li>
+                {% else %}
+                  <li class="disabled page-item"><span class="page-link">Next</span></li>
+                {% endif %}
+              </ul>
+            </nav>
+        </div>
+    {% endif %}
 </div>
 {% endblock %}
 {% block postloadjs %}
