--- a/static/css/base.css
+++ b/static/css/base.css
@@ -43,6 +43,15 @@ a {
 .form-control{
     padding: 0rem 0.75rem;
 }
+h1{
+    font-size: 2.0rem;
+}
+h2 {
+  font-size: 1.6rem;
+}
+h3 {
+   font-size: 1.3rem;
+}
 /* ----- Start of Color palette ----- */
 /* --- Global --- */
 body {
@@ -185,6 +194,30 @@ body {
     height: 55px;
     width: 180px;
 }
+/* Pagination */
+.pagination-holder {
+    display: flex;
+    justify-content: center;
+}
+.center-div {
+    display: flex;
+    justify-content: center;
+}
+
+.page-link {
+    color: #1E5128;
+}
+
+.page-item.active .page-link {
+    background-color: #1E5128;
+    border-color: #1E5128;
+}
+
+.page-item:last-child .page-link {
+    color: #1E5128;
+}
+
+
 /* Header */
 .mobile-nav-link-pd {
     padding: 0.5rem 0.5rem;
@@ -209,9 +242,6 @@ body {
 /* Nav bar */
 .nav-link{
     color: #1E5128;
-}
-.products-page {
-    padding-top: 2rem;
 }
 .btt-button {
     height: 42px;
@@ -266,6 +296,19 @@ input[name='q']::placeholder {
 .card-img-top {
     width: 300px ;
     height: 300px ;
+    border: 0;
+    margin: auto;
+    margin-bottom: 10px;
+}
+.news-card {
+    width: 400px !important;
+    border: 0;
+    margin: auto;
+    margin-bottom: 10px;
+}
+.news-card-img-top {
+    width: 400px ;
+    height: 400px ;
     border: 0;
     margin: auto;
     margin-bottom: 10px;
@@ -329,6 +372,10 @@ input[name='q']::placeholder {
     background-color: #1E5128;
     color: white;
   }
+
+.news-items {
+       background-color: whitesmoke;
+}
 
 .red-btn {
     background-color: #DB4437;
