--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -13,20 +13,17 @@
 <div class="overlay"></div>
 <div class="hero-image">
     <div class="section-holder">
-        <div class="form-holder-lg">
+        <div class="form-holder-lg form-holder-add-product">
             <div class="container">
                 <div class="overlay"></div>
-                    <div class="container">
                         <div class="row">
-                            <div class="col-12 col-md-6">
-                                <hr>
-                                <h1 class="logo-font mb-4">Product Management</h1>
-                                <h2 class="text-muted">Add a Product</h2>
-                                <hr>
+                            <div class="col-lg-12 col-md-6">
+                                <h1 class="header-font mb-2 pt-4 text-center black-white">Product Management</h1>
+                                <h2 class="header-font mb-2 pt-4 text-center black-white">Add a Product</h2>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-12 col-md-6">
+                            <div class="col-lg-12 col-md-6">
                                 <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
                                     {% csrf_token %}
                                     {% for field in form %}
@@ -43,7 +40,6 @@
                                 </form>
                             </div>
                         </div>
-                    </div>
             </div>
         </div>
     </div>
