--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -128,7 +128,7 @@
                 </div>
             </div>
             <div class="row">
-                    <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+                    <div class="col-sm-12 col-md-6 col-lg-4 offset-lg-2">
                         <p class="mb-0 product-name">{{ product.name }}</p>
                         <p class="mb-0">{{ product.description }}</p>
                         <div class="row">
@@ -151,10 +151,36 @@
                     {% if product.feature4 %}
                     <p class="text-muted">- {{ product.feature4 }}</p>
                     {% endif %}
-                    </div>  
-                </div>
+                    </div>
             </div>
+            <div class="row">
+                <div class="col-12 offset-lg-2">
+                                                              <!-- Comment Form -->
+                        <div class="container container-pd">
+                            <div class="row pb-5">
+                                <div class="col-lg-6 col-md-12 mt-1 pl-0 pb-4">
+                                    {% if request.user.is_authenticated %}
+                                    <h3 class="text-uppercase">Add a comment</h3>
+                                    <form class="form" method="POST">
+                                        {% csrf_token %}
+                                            {{ rating_comment_form|crispy }}
+                                        <button class="btn black-btn" type="submit"> Post Rating and
+                                            Review</button>
+                                    </form>
+                                </div>
+                            </div>
+                                {% else %}
+                                <div class="form-check-label" for="id-save-info">
+                                    <a class="text-info" href="{% url 'account_signup' %}">Create an account</a> or
+                                    <a class="text-info" href="{% url 'account_login' %}">login</a> to comment on this post.
+                                </div>
+                            {% endif %}
+
         </div>
+            </div>
+</div>
+        </div>
+
     </div>
 </div>        
 {% endblock %}
