refactor: Wave fixes

--- a/news/templates/news/edit_news_item.html
+++ b/news/templates/news/edit_news_item.html
@@ -12,9 +12,8 @@
 <div class="overlay"></div>
 <div class="hero-image">
     <div class="section-holder">
-        <div class="form-holder-lg">
+        <div class="form-holder-lg form-holder-generic">
             <div class="container">
-                <div class="bg-overlay"></div>
                 <div class="row">
                     <div class="col-12">
                         <h1 class="header-font mb-4 pt-2 text-center">News Item Management</h1>
