--- a/favourites/templates/favourites/favourites.html
+++ b/favourites/templates/favourites/favourites.html
@@ -17,6 +17,7 @@
         </div>
         <div class="col-12 col-sm-6 p-4 my-auto">
             <div class="sort-select-wrapper w-100">
+                <label for="sort-selector"hidden>Sort favourites</label>
                 <select id="sort-selector" class="custom-select custom-select-sm border">
                     <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
                     <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
@@ -37,24 +38,22 @@
                 {% for favourite in favourites_items %}
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                                 <div class="card" style="width: 18rem;">
+                                    {% if favourite.image %}
+                                        <a href="{% url 'product_detail' favourite.id %}">
+                                            <img src="{{ favourite.image.url }}" class="card-img-top" alt="product">
+                                        </a>
+                                    {% else %}
+                                        <a href="{% url 'product_detail' favourite.id %}">
+                                            <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top" alt="no image available">
+                                        </a>
+                                    {% endif %}
                                     <div class="card-body">
                                         <div class="row">
                                             <div class="col-12">
-                                                {% if favourite.image %}
-                                                    <a href="{% url 'product_detail' favourite.id %}">
-                                                        <img src="{{ favourite.image.url }}" class="card-img-top" alt="product image">
-                                                    </a>
-                                                {% else %}
-                                                    <a href="{% url 'product_detail' favourite.id %}">
-                                                        <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top" alt="no image available">
-                                                    </a>
-                                                {% endif %}
+                                                <h2 class="card-title font-black">{{ favourite.name }}</h2>
                                             </div>
                                             <div class="col-12">
-                                                <h5 class="card-title font-black">{{ favourite.name }}</h5>
-                                            </div>
-                                            <div class="col-12">
-                                                <h6 class="font-weight-light font-black">{{ favourite.category }}</h6>
+                                                <h3 class="font-weight-light font-black">{{ favourite.category }}</h3>
                                             </div>
                                             <div class="col-6 font-black">
                                                 {{ favourite.price }}
