--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -13,11 +13,10 @@
 <div class="overlay"></div>
 <div class="hero-image">
     <div class="section-holder">
-        <div class="form-holder-lg form-holder-add-product">
+        <div class="form-holder-lg form-holder-generic">
             <div class="container">
-                <div class="overlay"></div>
                         <div class="row">
-                            <div class="col-lg-12 col-md-6">
+                            <div class="col-lg-12 col-md-12">
                                 <h1 class="header-font mb-2 pt-4 text-center black-white">Product Management</h1>
                                 <h2 class="header-font mb-2 pt-4 text-center black-white">Add a Product</h2>
                             </div>
