--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -10,36 +10,39 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-md-6">
-                <hr>
-                <h1 class="font-black-bg mb-4">Product Management</h1>
-                <h2 class="font-black-bg">Edit a Product</h2>
-                <hr>
+<div class="overlay"></div>
+<div class="hero-image">
+    <div class="section-holder">
+        <div class="form-holder-lg form-holder-generic">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h1 class="header-font mb-2 pt-4 text-center black-white">Product Management</h1>
+                        <h2 class="header-font mb-2 pt-4 text-center black-white">Edit a Product</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2" enctype="multipart/form-data">
+                            {% csrf_token %}
+                            {% for field in form %}
+                                {% if field.name != 'image' %}
+                                    {{ field | as_crispy_field }}
+                                {% else %}
+                                    {{ field }}
+                                {% endif %}
+                            {% endfor %}
+                            <div class="text-right">
+                                <a class="btn black-btn" href="{% url 'products' %}">Cancel</a>
+                                <button class="btn green-btn" type="submit">Update Product</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
-
-        <div class="row">
-            <div class="col-12 col-md-6 edit-product">
-                <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    {% for field in form %}
-                        {% if field.name != 'image' %}
-                            {{ field | as_crispy_field }}
-                        {% else %}
-                            {{ field }}
-                        {% endif %}
-                    {% endfor %}
-                    <div class="text-right">
-                        <a class="btn black-btn rounded-0" href="{% url 'products' %}">Cancel</a>
-                        <button class="btn green-btn rounded-0" type="submit">Update Product</button>
-                    </div>
-                </form>
-            </div>            
-        </div>
     </div>
+</div>
 {% endblock %}
 
 {% block postloadjs %}
