--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -17,6 +17,7 @@
         </div>
         <div class="col-12 col-sm-6 p-4 my-auto">
             <div class="sort-select-wrapper w-100">
+                <label for="sort-selector"hidden>Sort products</label>
                 <select id="sort-selector" class="custom-select custom-select-sm border">
                     <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
                     <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
@@ -34,13 +35,12 @@
     <div class="row">
         <div class="">
             <div class="row">
-                                    {% for product in products %}
+                {% for product in products %}
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-
                                 <div class="card" style="width: 18rem;">
                                     {% if product.image %}
                                         <a href="{% url 'product_detail' product.id %}">
-                                            <img src="{{ product.image.url }}" class="card-img-top" alt="product image">
+                                            <img src="{{ product.image.url }}" class="card-img-top" alt={{ product.name }}>
                                         </a>
                                     {% else %}
                                         <a href="{% url 'product_detail' product.id %}">
@@ -50,13 +50,10 @@
                                     <div class="card-body">
                                         <div class="row">
                                             <div class="col-12">
-                                                <h5 class="card-title font-black">{{ product.name }}</h5>
+                                                <h2 class="card-title font-black">{{ product.name }}</h2>
                                             </div>
                                             <div class="col-12">
-                                                <h6 class="font-weight-light font-black">{{ product.category }}</h6>
-                                            </div>
-                                            <div class="col-6 font-black">
-                                                {{ product.price }}
+                                                <h3 class="font-weight-light font-black">{{ product.category.friendly_name }}</h3>
                                             </div>
                                             <div class="col-6 align-self-center font-black">
                                                 <strong>€{{ product.price }}</strong>
